# Tremolo

./: .github  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
